[gd_scene load_steps=13 format=3 uid="uid://baequb1rnjihv"]

[ext_resource type="Script" path="res://Bullet.gd" id="1_fxj8l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qmc7w"]
size = Vector3(0.15, 0.15, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7qf06"]
albedo_color = Color(0, 100, 100, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_02pod"]
size = Vector3(0.05, 0.05, 0.2)

[sub_resource type="Animation" id="Animation_iysf4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bullet_Texture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yk6wl"]
resource_name = "blink_out"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bullet_Texture:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jam63"]
_data = {
"RESET": SubResource("Animation_iysf4"),
"blink_out": SubResource("Animation_yk6wl")
}

[sub_resource type="Curve" id="Curve_4qp6i"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.79904, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j3b7q"]
curve = SubResource("Curve_4qp6i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pxckd"]
lifetime_randomness = 1.0
emission_shape = 2
emission_sphere_radius = 1.0
particle_flag_rotate_y = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 10.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -5.0
linear_accel_max = -2.0
angle_min = -720.0
angle_max = 720.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_j3b7q")
turbulence_noise_strength = 6.14

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_romb0"]
albedo_color = Color(0, 17.19, 100, 1)

[sub_resource type="BoxMesh" id="BoxMesh_f32ob"]
material = SubResource("StandardMaterial3D_romb0")
size = Vector3(0.1, 0.1, 0.1)

[node name="Bullet" type="RigidBody3D" groups=["bullet"]]
mass = 0.5
continuous_cd = true
script = ExtResource("1_fxj8l")

[node name="Area3d" type="Area3D" parent="."]

[node name="CollisionShape3d" type="CollisionShape3D" parent="Area3d"]
shape = SubResource("BoxShape3D_qmc7w")

[node name="Bullet_Texture" type="CSGBox3D" parent="."]
size = Vector3(0.05, 0.05, 0.2)
material = SubResource("StandardMaterial3D_7qf06")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_02pod")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jam63")
}

[node name="GpuParticles3d" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
fixed_fps = 0
process_material = SubResource("ParticleProcessMaterial_pxckd")
draw_pass_1 = SubResource("BoxMesh_f32ob")

[connection signal="body_entered" from="Area3d" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
